# SOAR

./: CMakeLists.txt  Main.qml  README.md  coffee.pro  coffee.pro.user.9b7ef64  dictation.qml  first_page.qml  main.cpp  main.qml  pictureQuiz_S.qml  qml.qrc  score.qml  select.qml  select_kind.qml  sequence_S.qml
